# vec-utils

./: .gitignore  .gitmodules  Cargo.toml  NOTES.md  README.md  clippy.toml  rustfmt.toml  update_version.py
.github/workflows/: python.yml  rust.yml
bektor/: Cargo.toml
bektor/examples/: matrix_math.rs
bektor/src/: complex.rs  lib.rs  quat.rs
bektor/src/matrix/: complex.rs  generic.rs  real.rs  traits.rs
benchmarks/: Cargo.toml
benchmarks/benches/: intersperse.rs  matrix_operations.rs  quat_from_matrix.rs
docs/: quaternions.typ
src/: angle.rs  lib.rs  matrix.rs  quat.rs  vec3d.rs
src/geometry/: circle.rs  intersection.rs  plane.rs  sphere.rs
vec-utils/: Cargo.toml
vec-utils-py/: Cargo.toml  README.md  pyproject.toml
vec-utils-py/src/: angle.rs  geometry.rs  lib.rs  quat.rs  vec3d.rs  vec_list.rs
vec-utils-py/src/geometry/: circle.rs  intersection.rs  plane.rs
vec-utils-py/tests/: test_join.rs
vec-utils-py/vec_utils_py/: __init__.pyi
vec-utils-py/vec_utils_py/geometry/: __init__.pyi
vec-utils/examples/: matrix_math.rs
vec-utils/src/: angle.rs  complex.rs  geometry.rs  hilbert.rs  lib.rs  macros.rs  matrix.rs  quat.rs  vec3d.rs
vec-utils/src/geometry/: circle.rs  intersection.rs  plane.rs
vec-utils/src/matrix/: complex.rs  generic.rs  real.rs  traits.rs
