[package]
name = "bektor"
version = "0.3.2"
edition = "2024"
authors = ["Akari Harada <akaritwo0two@gmail.com>"]
license = "GPL-3.0-only"
readme = "../README.md"
repository = "https://github.com/Akari202/vec-utils/"
keywords = ["geometry", "linear_algebra", "math", "quaternion", "vector"]
categories = ["mathematics", "no-std::no-alloc"]
description = "A simple vector, quaternion, geometry, and matrix library"
exclude = ["examples/"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "bektor"

[[example]]
name = "matrix_math"
required-features = ["matrix", "std"]

[dependencies]
glam = { version = "0.32.0", default-features = false, features = ["nostd-libm"], optional = true }
libm = { version = "0.2.16" }
matrixmultiply = { version = "0.3.10", default-features = false, features = [
  "cgemm"
], optional = true }
nalgebra = { version = "0.34.1", default-features = false, features = ["libm"], optional = true }
rand = { version = "0.10.0", default-features = false, optional = true }
rkyv = { version = "0.8.15", default-features = false, features = ["bytecheck"], optional = true }
serde = { version = "1.0.219", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "2.0.17", default-features = false }

[dev-dependencies]
assert_float_eq = "1.2.0"
pretty_assertions = "1.4.1"

[features]
default = ["all-nostd"]
# default = ["rand", "std"]
all = ["glam", "matrix", "nalgebra", "rand", "rkyv", "serde", "std"]
all-nostd = ["glam", "matrix", "nalgebra", "rand", "rkyv", "serde"]
glam = ["dep:glam"]
matrix = ["dep:matrixmultiply"]
nalgebra = ["dep:nalgebra"]
rand = ["dep:rand"]
rkyv = ["dep:rkyv"]
serde = ["dep:serde"]
std = [
  "glam?/std",
  "matrixmultiply?/std",
  "nalgebra?/std",
  "rand?/std",
  "rkyv?/std",
  "serde?/std",
  "thiserror/std"
]
