[package]
name = "vec-utils-py"
version = "0.1.2"
edition = "2024"
authors = ["Akari Harada <akaritwo0two@gmail.com>"]
license = "GPL-3"

[lib]
crate-type = ["cdylib", "rlib"]
name = "vec_utils_py"

[dependencies]
itertools = "0.14.0"
pyo3 = { version = "0.26.0", features = [
  "extension-module",
  "generate-import-lib",
  "experimental-inspect"
] }
rayon = "1.11.0"
vec-utils = { path = "../vec-utils" }
