[package]
name = "vec-utils-py"
version = "0.3.2"
edition = "2024"
authors = ["Akari Harada <akaritwo0two@gmail.com>"]
license = "	GPL-3.0-only"
repository = "https://github.com/Akari202/vec-utils/"

[lib]
crate-type = ["cdylib", "rlib"]
name = "vec_utils_py"

[dependencies]
bektor = { path = "../bektor", default-features = false, features = [
  "matrix",
  "std"
] }
ordered-float = "5.1.0"
pyo3 = { version = "0.28.0", features = [
  "experimental-inspect",
  "extension-module",
  "generate-import-lib"
] }
rayon = "1.11.0"
