[project]
name = "vec-utils-py"
version = "0.3.1"
requires-python = ">=3.9"
authors = [
  { name="Akari202", email="akaritwo0two@gmail.com" }
]
description = "A simple vector operations library"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent"
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]

[project.urls]
GitHub = "https://github.com/Akari202/vec-utils"
Issues = "https://github.com/Akari202/vec-utils/issues"

[tool.pyrefly.errors]
bad-override = "ignore"
missing-import = "ignore"
unsupported-operation = "ignore"
missing-module-attribute = "ignore"

[build-system]
requires = ["maturin>=1.0, <2.0"]
build-backend = "maturin"

[tool.basedpyright]
typeCheckingMode = "all"
reportExplicitAny = "none"
reportAny = "none"
reportImplicitOverride = "none"
reportIncompatibleMethodOverride = "none"
reportMissingImports = "none"
ignore = ["tests/vec_list.py"]

[tool.pyright]
typeCheckingMode = "strict"
reportImplicitOverride = "none"
reportIncompatibleMethodOverride = "none"
reportMissingImports = "none"
ignore = ["tests/vec_list.py"]

[tool.pyrefly]
infer-with-first-use = false
