[package]
name = "vec-utils"
version = "0.2.2"
edition = "2024"
authors = ["Akari Harada <akaritwo0two@gmail.com>"]
license = "GPL-3"

[lib]
name = "vec_utils"

[dependencies]
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies]
assert_float_eq = "1.2.0"
pretty_assertions = "1.4.1"

[features]
serde = ["dep:serde"]
