[package]
name = "vec-utils"
version = "0.2.5"
edition = "2024"
authors = ["Akari Harada <akaritwo0two@gmail.com>"]
license = "GPL-3"

[lib]
name = "vec_utils"

[dependencies]
libm = { version = "0.2.15" }
rkyv = { version = "0.8.12", default-features = false, features = ["bytecheck"], optional = true }
serde = { version = "1.0.219", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
assert_float_eq = "1.2.0"
pretty_assertions = "1.4.1"

[features]
default = ["std"]
rkyv = ["dep:rkyv"]
serde = ["dep:serde"]
std = ["rkyv?/std", "serde?/std"]
