[package]
name = "vec-utils"
version = "0.3.1"
edition = "2024"
authors = ["Akari Harada <akaritwo0two@gmail.com>"]
license = "GPL-3"

[lib]
name = "vec_utils"

[[example]]
name = "matrix_math"
required-features = ["matrix", "std"]

[dependencies]
libm = { version = "0.2.16" }
matrixmultiply = { version = "0.3.10", default-features = false, features = [
  "cgemm"
], optional = true }
nalgebra = { version = "0.34.1", default-features = false, optional = true }
rkyv = { version = "0.8.15", default-features = false, features = ["bytecheck"], optional = true }
serde = { version = "1.0.219", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "2.0.17", default-features = false }

[dev-dependencies]
assert_float_eq = "1.2.0"
pretty_assertions = "1.4.1"

[features]
default = ["std"]
# default = ["matrix", "nalgebra", "rkyv", "serde"]
matrix = ["dep:matrixmultiply"]
nalgebra = ["dep:nalgebra"]
rkyv = ["dep:rkyv"]
serde = ["dep:serde"]
std = [
  "matrixmultiply?/std",
  "nalgebra?/std",
  "rkyv?/std",
  "serde?/std",
  "thiserror/std"
]
